[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/script/snake walls.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 300 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 512, 10 )

[node name="walls" type="Node2D"]
script = ExtResource( 1 )

[node name="wall_left" type="Area2D" parent="."]
position = Vector2( -10, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall_left"]
shape = SubResource( 1 )

[node name="wall_right" type="Area2D" parent="."]
position = Vector2( 1034, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall_right"]
shape = SubResource( 1 )

[node name="wall_top" type="Area2D" parent="."]
position = Vector2( 512, -10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall_top"]
shape = SubResource( 2 )

[node name="wall_bottom" type="Area2D" parent="."]
position = Vector2( 512, 610 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall_bottom"]
shape = SubResource( 2 )

[connection signal="area_entered" from="wall_left" to="." method="_on_wall_left_area_entered"]
[connection signal="area_entered" from="wall_right" to="." method="_on_wall_right_area_entered"]
[connection signal="area_entered" from="wall_top" to="." method="_on_wall_top_area_entered"]
[connection signal="area_entered" from="wall_bottom" to="." method="_on_wall_bottom_area_entered"]
